# devrel-extras

./: .gitignore  LICENSE  README.md
.github/workflows/: auto-close-pr.yaml
blogs/2311-mojo-matrix-slice/: README.md
blogs/2311-whats-new-0-5/: README.md  whats_new_v0.5.ipynb
blogs/2403-max-engine-c-api/: .gitignore  README.md
blogs/2403-semantic-search-with-max-engine/: .gitignore  README.md  bge-embed.ipynb  requirements.txt
blogs/2404-fast-multimodal-search-with-snowflake-embedding-and-max-engine/: .gitignore  README.md  blog.ipynb  custom_multimodal_model_epoch_1.pt  custom_multimodal_model_epoch_2.pt  custom_multimodal_model_epoch_3.pt  custom_multimodal_model_epoch_4.pt  custom_multimodal_model_epoch_5.pt  requirements.txt
blogs/2404-multimodal-search-with-max-engine/: README.md  blog.ipynb
blogs/2405-max-graph-api-tutorial/: .gitignore  README.md  add.mojo  matmul.mojo  mnist.mojo  mnist.py  requirements.txt
blogs/2406-what-is-new-in-max-24.4/: README.md  llm.mojo  main.mojo
blogs/agentic-workflows/max-serve-openai-function-calling/: .env.sample  .gitignore  README.md  app.py  multi_function_calls.py  pyproject.toml  run.sh  single_function_call.py
blogs/hands-on-with-mojo-24-6/: .gitignore  blog.md  example1.mojo  example2.mojo  example3.mojo  example4.mojo  example5.mojo  example6.mojo  example7.mojo  mojoproject.toml
blogs/hands_on_with_mojo_24_5/: README.md  generic_safe_buffer.mojo  mojoproject.toml  safe_buffer.mojo  test_generic_safe_buffer.mojo  unsafe_buffer.mojo
blogs/llama3-chat/: Dockerfile.ui  README.md  docker-bake.hcl  docker-compose.yml  pyproject.toml  ui.py
blogs/max-blogpost-demos/: README.md
blogs/max-gaurdrails-eval/: .gitignore
blogs/max-guardrails-eval/: pyproject.toml
blogs/max-imagenet-accuracy/: README.md  max-keras-resnet50-imagenet.ipynb
blogs/max-optimize-deploy/: README.md
blogs/max-sagemaker-deploy/: README.md  max-roberta-tf-sagemaker.ipynb
blogs/mojo-calculating-and-plotting-a-valentines-day-heart/: README.md  valentine.mojo
blogs/mojo-dunder/: DunderArray.mojo  README.md  __init__.mojo  dunder_notebook.ipynb
blogs/mojo-kmeans-from-python/: README.md  bench_kmeans.mojo  run_kmeans.mojo
blogs/mojo-matrix-slice/: mojo-matrix-slice.ipynb
blogs/mojo-pi-calculation/: README.md  mojo_pi.mojo
blogs/mojo-row-major-column-major/: README.md  python_mean_bench.py  row_col_matrix.mojo  row_col_mojo.ipynb
blogs/whats_new_mojo_24_2/: README.md  whats_new_mojo_24_2.ipynb
blogs/whats_new_mojo_24_3/: README.md  whats_new_mojo_24_3.ipynb
blogs/whats_new_mojo_24_4/: README.md  utils.py  whats_new_mojo_24_4.ipynb
blogs/whats_new_mojo_24_5/: .gitignore  (+6 more)
(+56 files in other folders)
