[project]
name = "guardrails_eval"
description = "Evaluates guardrail models against a provided dataset"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max-nightly"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
guardrails_eval = { path = ".", editable = true }

[tool.pixi.tasks]
eval = "python -m guardrails_eval"
help = "python -m guardrails_eval --help"

[tool.pixi.dependencies]
max = ">=24.6.0.dev2024120905,<25"
openai = ">=1.57.2,<2"
pandas = ">=2.2.3,<3"
scikit-learn = ">=1.6.0,<2"
rich = ">=13.9.4,<14"
click = ">=8.1.7,<9"
